# JNIApplication

./: .gitignore  C语言JNI_OnLoad.c  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jnilib.cpp  native-lib.cpp
app/src/main/java/com/jni/tzx/: MainActivity.java  TestJavaClass.java
app/src/main/java/com/jni/tzx/utils/: JNIUitls.java
app/src/main/jni/: native-lib.cpp  nativelib.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
nativelib/src/main/java/com/example/nativelib/: NativeLib.java
